hammer working with menus

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </script>
   </head>
 
-  <body>
+  <body id="the-body">
 
     <!-- this is the start page -->
     <div id="start-page">
@@ -84,7 +84,7 @@
 
     <!-- this is the menu (incl side menus) -->
     <nav id="menu">
-        <div class="catch menu-component hidden"></div>
+        <div id="options-catch" class="catch menu-component hidden"></div>
 
         <div id="menu-bar" class="menu-component">
             <div id="menu-title">
