css and js for profile page

--- a/index.html
+++ b/index.html
@@ -117,13 +117,18 @@
         <div id="profile">
             <div id="menu-profile" class="menu-toggle menu-component">
                 <div class="profile">
-                    <div class="title">
-                        <div id="existing-name">
-                            <h1>myName</h1>
+                    <div class="left-container">
+                        <div class="title">
+                            <div id="existing-name">
+                                <h1>myName</h1>
+                            </div>
                         </div>
+                        <h3 id="existing-trail">You have not selected a trail<h3>
+                        <ul class='list-of-trails'></ul>
                     </div>
-                    <button class='logout'>Switch User</button>
-                    <ul class='list-of-trails'></ul>
+                    <div class="right-container">
+                        <button class='logout'>Switch User</button>
+                    </div>
                 </div>
             </div>
             <div id="toggle-profile" class="toggle menu-component">
